# light-kanban

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  docs.md  implementation-plan.md
.github/workflows/: ci.yml
backend/: pyproject.toml  schema.sql
backend/app/: errors.py  main.py
backend/app/api/: auth.py  boards.py  columns.py  deps.py  errors.py  links.py  tasks.py
backend/app/repo/: boards.py  columns.py  db.py  links.py  tasks.py  users.py
backend/app/schemas/: auth.py  boards.py  columns.py  links.py  tasks.py
backend/app/services/: auth.py  boards.py  columns.py  common.py  links.py  tasks.py
backend/tests/: conftest.py  helpers.py
backend/tests/contract/: conftest.py  test_auth_api.py  test_boards_api.py  test_columns_api.py  test_links_api.py  test_tasks_api.py
backend/tests/unit/: test_auth.py  test_boards.py  test_columns.py  test_links.py  test_migration.py  test_ownership.py  test_tasks.py
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: scenarios.spec.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  queries.ts  types.ts
frontend/src/components/: BoardPage.tsx  BoardsPage.tsx  ColumnView.tsx  ConfirmDialog.tsx  LoginPage.tsx  Menu.tsx  TaskCard.tsx  TaskPanel.tsx  Toasts.tsx
frontend/src/i18n/: ru.ts
